--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,7 @@ cmake_minimum_required(VERSION 3.0)
 add_library( kst STATIC src/Logger.cpp src/Format.cpp)
 
 if(MSVC)
-  add_definitions(-D_CRT_NONSTDC_NO_DEPRECATE)
+  target_compile_definitions(kst PRIVATE -D_CRT_NONSTDC_NO_DEPRECATE)
 endif()
 
 target_include_directories(kst PUBLIC
