--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.0)
 
 add_subdirectory(ui)
-add_subdirectory(simple)
+add_subdirectory(fovtest)
 add_subdirectory(core)
