--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,12 @@
 cmake_minimum_required(VERSION 3.10)
 
-add_subdirectory(glider)
-add_subdirectory(zorro)
+cmake_policy(SET CMP0003 NEW)
+
+if(VCPKG_ROOT)
+  include(${VCPKG_ROOT}/scripts/buildsystems/vcpkg.cmake)
+endif()
+
+add_subdirectory(deps)
 
 file (GLOB ZE_FILES ./*.cpp )
 
@@ -12,4 +17,5 @@ if(MSVC)
   add_definitions(-DWIN32_LEAN_AND_MEAN -DVC_EXTRALEAN -DNOMINMAX )
   set_target_properties(uitest PROPERTIES LINK_FLAGS_DEBUG "/SUBSYSTEM:CONSOLE")
 endif()
+
 target_link_libraries(ze glider-ui zorro)
