--- a/deps/glider/tests/core/CMakeLists.txt
+++ b/deps/glider/tests/core/CMakeLists.txt
@@ -8,7 +8,7 @@ target_link_libraries(coretest glider-core)
 
 add_custom_command(
   TARGET coretest POST_BUILD
-  COMMAND ${CMAKE_COMMAND} -E copy ${PROJECT_SOURCE_DIR}/tests/data/FreeMono.ttf      $<TARGET_FILE_DIR:coretest>
-  COMMAND ${CMAKE_COMMAND} -E copy ${PROJECT_SOURCE_DIR}/tests/data/potion_bubbly.png $<TARGET_FILE_DIR:coretest>
-  COMMAND ${CMAKE_COMMAND} -E copy ${PROJECT_SOURCE_DIR}/tests/data/Untitled.png      $<TARGET_FILE_DIR:coretest>
-  COMMAND ${CMAKE_COMMAND} -E copy ${PROJECT_SOURCE_DIR}/tests/data/FSEX300.ttf       $<TARGET_FILE_DIR:coretest>)
+  COMMAND ${CMAKE_COMMAND} -E copy ${tests_data_dir}/FreeMono.ttf      $<TARGET_FILE_DIR:coretest>
+  COMMAND ${CMAKE_COMMAND} -E copy ${tests_data_dir}/potion_bubbly.png $<TARGET_FILE_DIR:coretest>
+  COMMAND ${CMAKE_COMMAND} -E copy ${tests_data_dir}/Untitled.png      $<TARGET_FILE_DIR:coretest>
+  COMMAND ${CMAKE_COMMAND} -E copy ${tests_data_dir}/FSEX300.ttf       $<TARGET_FILE_DIR:coretest>)
