--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,5 +1,7 @@
 cmake_minimum_required(VERSION 3.0)
 
+set(tests_data_dir ${CMAKE_CURRENT_SOURCE_DIR}/data)
+
 add_subdirectory(ui)
 add_subdirectory(fovtest)
 add_subdirectory(core)
