--- a/tests/fovtest/CMakeLists.txt
+++ b/tests/fovtest/CMakeLists.txt
@@ -5,5 +5,5 @@ target_link_libraries(fovtest glider-core)
 
 add_custom_command(
   TARGET fovtest POST_BUILD
-  COMMAND ${CMAKE_COMMAND} -E copy ${PROJECT_SOURCE_DIR}/tests/data/testmap.txt $<TARGET_FILE_DIR:fovtest>
-  COMMAND ${CMAKE_COMMAND} -E copy ${PROJECT_SOURCE_DIR}/tests/data/FSEX300.ttf $<TARGET_FILE_DIR:fovtest>)
+  COMMAND ${CMAKE_COMMAND} -E copy ${tests_data_dir}/testmap.txt $<TARGET_FILE_DIR:fovtest>
+  COMMAND ${CMAKE_COMMAND} -E copy ${tests_data_dir}/FSEX300.ttf $<TARGET_FILE_DIR:fovtest>)
