--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,8 +14,8 @@ add_definitions(-DZVM_STATIC_MATRIX)
 
 add_executable(ze ${ZE_FILES} )
 if(MSVC)
-  add_definitions(-DWIN32_LEAN_AND_MEAN -DVC_EXTRALEAN -DNOMINMAX )
-  set_target_properties(uitest PROPERTIES LINK_FLAGS_DEBUG "/SUBSYSTEM:CONSOLE")
+  target_compile_definitions(ze PRIVATE -DWIN32_LEAN_AND_MEAN -DVC_EXTRALEAN -DNOMINMAX )
+  set_target_properties(ze PROPERTIES LINK_FLAGS_DEBUG "/SUBSYSTEM:CONSOLE")
 endif()
 
 target_link_libraries(ze glider-ui zorro)
