major warnings cleanup

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,15 +24,21 @@ add_library(zorro STATIC
 
 target_link_libraries( zorro kst)
 
+add_executable( zorro-bin zorro.cpp )
+
+set_target_properties(zorro-bin PROPERTIES OUTPUT_NAME zorro )
+target_link_libraries( zorro-bin zorro )
+
 if(MSVC)
-  target_compile_definitions(zorro PRIVATE -D_CRT_SECURE_NO_WARNINGS)
+  target_compile_definitions(zorro PRIVATE -D_CRT_SECURE_NO_WARNINGS -D_CRT_SECURE_NO_DEPRECATE)
+  target_compile_definitions(zorro-bin PRIVATE -D_CRT_SECURE_NO_WARNINGS -D_CRT_SECURE_NO_DEPRECATE)
+  target_compile_options(zorro PRIVATE /wd4710 /wd4514 /wd4820 /wd4201 /wd4061 /wd4355 /wd4571)
 endif()
 
 if(NOT ZVM_STATIC_MATRIX)
   target_compile_definitions(zorro PUBLIC -DZVM_STATIC_MATRIX)
 endif()
 
-add_executable( zorro-bin zorro.cpp )
 
 if(CMAKE_BUILD_TYPE MATCHES Debug)
   target_compile_definitions(zorro PRIVATE -DDEBUG)
@@ -40,8 +46,6 @@ if(CMAKE_BUILD_TYPE MATCHES Debug)
   target_compile_options(zorro PRIVATE -Wall)
 endif()
 
-set_target_properties(zorro-bin PROPERTIES OUTPUT_NAME zorro )
-target_link_libraries( zorro-bin zorro )
 
 target_include_directories(zorro PUBLIC
   $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/>
