--- a/deps/kst/CMakeLists.txt
+++ b/deps/kst/CMakeLists.txt
@@ -3,7 +3,8 @@ cmake_minimum_required(VERSION 3.0)
 add_library( kst STATIC src/Logger.cpp src/Format.cpp)
 
 if(MSVC)
-  target_compile_definitions(kst PRIVATE -D_CRT_NONSTDC_NO_DEPRECATE)
+  target_compile_definitions(kst PRIVATE -D_CRT_NONSTDC_NO_DEPRECATE -D_CRT_SECURE_NO_WARNINGS)
+  target_compile_options(kst PRIVATE /wd4710 /wd4514 /wd4820)
 endif()
 
 target_include_directories(kst PUBLIC
